--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -20,11 +20,11 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-13, macos-14]
+        os: [macos-15-intel, macos-15]
         include:
-          - os: macos-13
+          - os: macos-15-intel
             arch: x64
-          - os: macos-14
+          - os: macos-15
             arch: arm64
       fail-fast: false
         
